[package]
name = "nft-io"
version = "0.2.7"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
# TODO! After merge new-testnet to master change branch to master (or new tag)
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", branch = "new-testnet" }
primitive-types = { version = "0.12.1", default-features = false }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "testnet", features = ["codegen"] }
